Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • xserver xserver
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 935
    • Issues 935
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 100
    • Merge requests 100
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorg
  • xserverxserver
  • Issues
  • #1269

Closed
Open
Created Dec 16, 2021 by Peter Korsgaard@jacmet

xserver 21.1.2 fails to build without systemd/udev

21.1.2 fails to build in a minimal configuration, where 2.1.1 worked:

./configure --target=aarch64-buildroot-linux-gnu --host=aarch64-buildroot-linux-gnu --build=x86_64-pc-linux-gnu --prefix=/usr --exec-prefix=/usr --sysconfdir=/etc --localstatedir=/var --program-prefix="" --disable-docs --disable-documentation --with-xmlto=no --with-fop=no --disable-dependency-tracking --enable-ipv6 - --disable-static --enable-shared  --disable-config-hal --enable-record --disable-xnest --disable-unit-tests --with-builder-addr=buildroot@buildroot.org CFLAGS="-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64  -Os -g0 -D_FORTIFY_SOURCE=1 -I/home/peko/source/buildroot/output-xorg/host/aarch64-buildroot-linux-gnu/sysroot/usr/include/pixman-1 -O2" --with-fontrootdir=/usr/share/fonts/X11/ --disable-xephyr --disable-xvfb --without-systemd-daemon --disable-systemd-logind --enable-xorg --enable-libdrm --disable-kdrive --disable-dri --disable-glx --disable-libunwind --disable-xvmc --disable-composite --enable-dri2 --enable-dri3 --disable-glamor --disable-screensaver --with-sha1=libsha1
..
xf86Events.c: In function ‘xf86VTLeave’:
xf86Events.c:386:25: error: ‘xf86_num_platform_devices’ undeclared (first use in this function); did you mean ‘xf86_platform_device’?
         for (i = 0; i < xf86_num_platform_devices; i++) {
                         ^~~~~~~~~~~~~~~~~~~~~~~~~
                         xf86_platform_device
xf86Events.c:386:25: note: each undeclared identifier is reported only once for each function it appears in
xf86Events.c:387:17: error: ‘xf86_platform_devices’ undeclared (first use in this function); did you mean ‘xf86_platform_devic ’?
             if (xf86_platform_devices[i].flags & XF86_PDEV_SERVER_FD) {
                 ^~~~~~~~~~~~~~~~~~~~~
                 xf86_platform_device
xf86Events.c:389:25: error: implicit declaration of function ‘xf86_platform_odev_attributes’; did you mean ‘xf86platformAddGPUDevices’? [-Werror=implicit-function-declaration]
                 major = xf86_platform_odev_attributes(i)->major;
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                         xf86platformAddGPUDevices
xf86Events.c:389:25: warning: nested extern declaration of ‘xf86_platform_odev_attributes’ [-Wnested-externs]
xf86Events.c:389:57: error: invalid type argument of ‘->’ (have ‘int’)
                 major = xf86_platform_odev_attributes(i)->major;
                                                         ^~
xf86Events.c:390:57: error: invalid type argument of ‘->’ (have ‘int’)
                 minor = xf86_platform_odev_attributes(i)->minor;
                                                         ^~
xf86Events.c:388:28: warning: variable ‘minor’ set but not used [-Wunused-but-set-variable]
                 int major, minor;
                            ^~~~~
xf86Events.c:388:21: warning: variable ‘major’ set but not used [-Wunused-but-set-variable]
                 int major, minor;
                     ^~~~~
cc1: some warnings being treated as errors
make[7]: *** [Makefile:770: xf86Events.lo] Error 1

Maybe commit 8eb1396d should be inside an #ifdef XSERVER_PLATFORM_BUS?

Edited Dec 16, 2021 by Peter Korsgaard
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking